feat: 优化数据库连接稳定性和前后端连接